[tool.poetry]
name = "vana-refinement-service"
version = "0.1.0"
description = "Refinement service for refining files using Vana's Data Registry."
authors = ["Kahtaf Alam <kahtaf@opendatalabs.xyz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
docker = "^7.1.0"
vana = "^0.47.0"
python-gnupg = "^0.5.4"
eciespy = "^0.4.4"
python-magic = "^0.4.27"
psutil = "^5.9.0"
sqlalchemy = "^2.0.41"
web3 = "^6.0.0"
eth-account = "^0.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
